--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 
 .DS_Store
+img/meetapp_img.png
+img/meetapp_img.png
+img/meetapp_img.png
+img/myfavfilmz_Angular_bigimg.png
+img/myfavfilmz_Angular_smallimg.png
+img/myfavfilmz_API_bigimg.png
+img/myfavfilmz_API_smallimg.png
+img/myfavfilmz_React_bigimg.png
+img/myfavfilmz_React_smallimg.png
+img/mylogo.ico
+img/mylogo.png
+img/pokedex_bigimg.png
+img/pokedex_smallimg.png
+img/wechat_bigimg.png
+img/wechat_smallimg.png
